# Django_project

./: Dockerfile  docker-compose.yaml
mysite/: db.sqlite3  pyproject.toml
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.mo  django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  avatar_update.html  base.html  login.html  register.html  user_detail.html  users_list.html
mysite/mysite/: settings.py  sitemap.py  urls.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders_fixture.json  products_fixture.json  users_fixture.json
mysite/shopapp/migrations/: 0007_alter_product_options.py  0008_product_created_by.py  0009_alter_product_options.py  0010_alter_order_options_alter_product_options.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/admin/shopapp/order/: change_list.html
mysite/shopapp/templates/shopapp/: archive-product.html  create-order.html  create-product.html  delete-order.html  order-detail.html  product-detail.html  products-list.html  update-order.html  update-product.html  user_orders_list.html
